add undo/redo for recording service sequences, cleanup
created new commands, reworked handlers, reduced duplicated code.